# obs-v4l2sink

./: CMakeLists.txt
cmake/: GDbusConfig.cmake
daemon/: CMakeLists.txt  com.obsproject.v4l2sink.xml  main.c  v4l2sink-daemon.c  v4l2sink-daemon.h
data/: CMakeLists.txt  com.obsproject.v4l2sink.conf  com.obsproject.v4l2sink.policy  com.obsproject.v4l2sink.service
src/: v4l2sink.cpp  v4l2sink.h  v4l2sinkproperties.cpp  v4l2sinkproperties.h
